tools/wasm/conez_api.h

#define bool    int
__attribute__((import_module("env"), import_name("led_set_pixel")))
void led_set_pixel(int channel, int pos, int r, int g, int b);
__attribute__((import_module("env"), import_name("led_fill")))
void led_fill(int channel, int r, int g, int b);
__attribute__((import_module("env"), import_name("led_show")))
void led_show(void);
__attribute__((import_module("env"), import_name("led_count")))
int led_count(int channel);
__attribute__((import_module("env"), import_name("led_gamma8")))
int led_gamma8(int val);
__attribute__((import_module("env"), import_name("led_set_gamma")))
void led_set_gamma(int enable);
__attribute__((import_module("env"), import_name("led_set_buffer")))
void led_set_buffer(int channel, const void *rgb_data, int count);
__attribute__((import_module("env"), import_name("led_shift")))
void led_shift(int channel, int amount, int r, int g, int b);
__attribute__((import_module("env"), import_name("led_rotate")))
void led_rotate(int channel, int amount);
__attribute__((import_module("env"), import_name("led_reverse")))
void led_reverse(int channel);
__attribute__((import_module("env"), import_name("led_set_pixel_hsv")))
void led_set_pixel_hsv(int channel, int pos, int h, int s, int v);
__attribute__((import_module("env"), import_name("led_fill_hsv")))
void led_fill_hsv(int channel, int h, int s, int v);
__attribute__((import_module("env"), import_name("hsv_to_rgb")))
int hsv_to_rgb(int h, int s, int v);
__attribute__((import_module("env"), import_name("rgb_to_hsv")))
int rgb_to_hsv(int r, int g, int b);
__attribute__((import_module("env"), import_name("get_lat")))
float get_lat(void);
__attribute__((import_module("env"), import_name("get_lon")))
float get_lon(void);
__attribute__((import_module("env"), import_name("get_alt")))
float get_alt(void);
__attribute__((import_module("env"), import_name("get_speed")))
float get_speed(void);
__attribute__((import_module("env"), import_name("get_dir")))
float get_dir(void);
__attribute__((import_module("env"), import_name("gps_valid")))
int gps_valid(void);
__attribute__((import_module("env"), import_name("gps_present")))
int gps_present(void);
__attribute__((import_module("env"), import_name("get_origin_lat")))
float get_origin_lat(void);
__attribute__((import_module("env"), import_name("get_origin_lon")))
float get_origin_lon(void);
__attribute__((import_module("env"), import_name("has_origin")))
int has_origin(void);
__attribute__((import_module("env"), import_name("origin_dist")))
float origin_dist(void);
__attribute__((import_module("env"), import_name("origin_bearing")))
float origin_bearing(void);
__attribute__((import_module("env"), import_name("get_roll")))
float get_roll(void);
__attribute__((import_module("env"), import_name("get_pitch")))
float get_pitch(void);
__attribute__((import_module("env"), import_name("get_yaw")))
float get_yaw(void);
__attribute__((import_module("env"), import_name("get_acc_x")))
float get_acc_x(void);
__attribute__((import_module("env"), import_name("get_acc_y")))
float get_acc_y(void);
__attribute__((import_module("env"), import_name("get_acc_z")))
float get_acc_z(void);
__attribute__((import_module("env"), import_name("imu_valid")))
int imu_valid(void);
__attribute__((import_module("env"), import_name("imu_present")))
int imu_present(void);
__attribute__((import_module("env"), import_name("get_temp")))
float get_temp(void);
__attribute__((import_module("env"), import_name("get_humidity")))
float get_humidity(void);
__attribute__((import_module("env"), import_name("get_brightness")))
float get_brightness(void);
__attribute__((import_module("env"), import_name("get_bat_voltage")))
float get_bat_voltage(void);
__attribute__((import_module("env"), import_name("get_solar_voltage")))
float get_solar_voltage(void);
__attribute__((import_module("env"), import_name("get_battery_percentage")))
float get_battery_percentage(void);
__attribute__((import_module("env"), import_name("get_battery_runtime")))
float get_battery_runtime(void);
__attribute__((import_module("env"), import_name("get_sunrise")))
int get_sunrise(void);
__attribute__((import_module("env"), import_name("get_sunset")))
int get_sunset(void);
__attribute__((import_module("env"), import_name("sun_valid")))
int sun_valid(void);
__attribute__((import_module("env"), import_name("is_daylight")))
int is_daylight(void);
__attribute__((import_module("env"), import_name("get_sun_azimuth")))
float get_sun_azimuth(void);
__attribute__((import_module("env"), import_name("get_sun_elevation")))
float get_sun_elevation(void);
__attribute__((import_module("env"), import_name("cue_playing")))
int cue_playing(void);
__attribute__((import_module("env"), import_name("cue_elapsed")))
int cue_elapsed(void);
__attribute__((import_module("env"), import_name("pin_set")))
void pin_set(int gpio);
__attribute__((import_module("env"), import_name("pin_clear")))
void pin_clear(int gpio);
__attribute__((import_module("env"), import_name("pin_read")))
int pin_read(int gpio);
__attribute__((import_module("env"), import_name("analog_read")))
int analog_read(int pin);
__attribute__((import_module("env"), import_name("get_epoch_ms")))
int64_t get_epoch_ms(void);
__attribute__((import_module("env"), import_name("millis")))
int millis(void);
__attribute__((import_module("env"), import_name("delay_ms")))
void delay_ms(int ms);
__attribute__((import_module("env"), import_name("time_valid")))
int time_valid(void);
__attribute__((import_module("env"), import_name("get_uptime_ms")))
int64_t get_uptime_ms(void);
__attribute__((import_module("env"), import_name("get_last_comm_ms")))
int64_t get_last_comm_ms(void);
__attribute__((import_module("env"), import_name("get_year")))
int get_year(void);
__attribute__((import_module("env"), import_name("get_month")))
int get_month(void);
__attribute__((import_module("env"), import_name("get_day")))
int get_day(void);
__attribute__((import_module("env"), import_name("get_hour")))
int get_hour(void);
__attribute__((import_module("env"), import_name("get_minute")))
int get_minute(void);
__attribute__((import_module("env"), import_name("get_second")))
int get_second(void);
__attribute__((import_module("env"), import_name("get_day_of_week")))
int get_day_of_week(void);
__attribute__((import_module("env"), import_name("get_day_of_year")))
int get_day_of_year(void);
__attribute__((import_module("env"), import_name("get_is_leap_year")))
int get_is_leap_year(void);
__attribute__((import_module("env"), import_name("get_param")))
int get_param(int id);
__attribute__((import_module("env"), import_name("set_param")))
void set_param(int id, int val);
__attribute__((import_module("env"), import_name("should_stop")))
int should_stop(void);
__attribute__((import_module("env"), import_name("random_int")))
int random_int(int min, int max);
__attribute__((import_module("env"), import_name("wait_pps")))
int wait_pps(int timeout_ms);
__attribute__((import_module("env"), import_name("wait_param")))
int wait_param(int id, int condition, int value, int timeout_ms);
#define WAIT_GT  0
#define WAIT_LT  1
#define WAIT_EQ  2
#define WAIT_NEQ 3
__attribute__((import_module("env"), import_name("print_i32")))
void print_i32(int val);
__attribute__((import_module("env"), import_name("print_f32")))
void print_f32(float val);
__attribute__((import_module("env"), import_name("print_i64")))
void print_i64(long long val);
__attribute__((import_module("env"), import_name("print_f64")))
void print_f64(double val);
__attribute__((import_module("env"), import_name("print_str")))
void print_str(const char *ptr, int len);
__attribute__((import_module("env"), import_name("lut_load")))
int lut_load(int index);
__attribute__((import_module("env"), import_name("lut_get")))
int lut_get(int index);
__attribute__((import_module("env"), import_name("lut_size")))
int lut_size(void);
__attribute__((import_module("env"), import_name("lut_set")))
void lut_set(int index, int value);
__attribute__((import_module("env"), import_name("lut_save")))
int lut_save(int index);
__attribute__((import_module("env"), import_name("lut_check")))
int lut_check(int index);
__attribute__((import_module("env"), import_name("file_open")))
int file_open(const char *path, int path_len, int mode);
__attribute__((import_module("env"), import_name("file_close")))
void file_close(int handle);
__attribute__((import_module("env"), import_name("file_read")))
int file_read(int handle, void *buf, int max_len);
__attribute__((import_module("env"), import_name("file_write")))
int file_write(int handle, const void *buf, int len);
__attribute__((import_module("env"), import_name("file_size")))
int file_size(int handle);
__attribute__((import_module("env"), import_name("file_seek")))
int file_seek(int handle, int pos);
__attribute__((import_module("env"), import_name("file_tell")))
int file_tell(int handle);
__attribute__((import_module("env"), import_name("file_exists")))
int file_exists(const char *path, int path_len);
__attribute__((import_module("env"), import_name("file_delete")))
int file_delete(const char *path, int path_len);
__attribute__((import_module("env"), import_name("file_rename")))
int file_rename(const char *old_path, int old_len, const char *new_path, int new_len);
__attribute__((import_module("env"), import_name("sinf")))
float sinf(float x);
__attribute__((import_module("env"), import_name("cosf")))
float cosf(float x);
__attribute__((import_module("env"), import_name("tanf")))
float tanf(float x);
__attribute__((import_module("env"), import_name("asinf")))
float asinf(float x);
__attribute__((import_module("env"), import_name("acosf")))
float acosf(float x);
__attribute__((import_module("env"), import_name("atanf")))
float atanf(float x);
__attribute__((import_module("env"), import_name("atan2f")))
float atan2f(float y, float x);
__attribute__((import_module("env"), import_name("powf")))
float powf(float base, float exp);
__attribute__((import_module("env"), import_name("expf")))
float expf(float x);
__attribute__((import_module("env"), import_name("logf")))
float logf(float x);
__attribute__((import_module("env"), import_name("log2f")))
float log2f(float x);
__attribute__((import_module("env"), import_name("fmodf")))
float fmodf(float x, float y);
__attribute__((import_module("env"), import_name("exp")))
double exp(double x);
static inline void print(const char *s) {
    print_str(s, (int)strlen(s));
}
static inline int rgb_r(int packed) { return (packed >> 16) & 0xFF; }
static inline int rgb_g(int packed) { return (packed >>  8) & 0xFF; }
static inline int rgb_b(int packed) { return  packed        & 0xFF; }
static inline int file_open_str(const char *path, int mode) {
    return file_open(path, (int)strlen(path), mode);
}
static inline int file_exists_str(const char *path) {
    return file_exists(path, (int)strlen(path));
}
static inline int file_delete_str(const char *path) {
    return file_delete(path, (int)strlen(path));
}